--- a/preamble.tex
+++ b/preamble.tex
@@ -1,5 +1,5 @@
 
-\documentclass[11pt,a4paper,twoside]{book}
+\documentclass[11pt,a4paper,twoside,final]{book}
 
 % Imports
 % ------------------------------------------------------------------------------
