section title capitalisation

--- a/sections/02-basics.tex
+++ b/sections/02-basics.tex
@@ -17,7 +17,7 @@
 % purpose applications, before introducing the Accelerate language.
 
 
-\section{Data Parallelism}
+\section{Data parallelism}
 \label{sec:data_parallelism}
 
 The major processor manufacturers and architectures have long since run out of
