--- a/sections/05-optimisation.tex
+++ b/sections/05-optimisation.tex
@@ -754,7 +754,7 @@ example, @isIdentity@ checks whether a function corresponds to the term $\lambda
 x.x$, and in the positive case witnesses that its type must be @a -> a@.
 
 
-\subsection{Producer/Producer Fusion}
+\subsection{Producer/Producer fusion}
 \label{sec:producer_producer_fusion}
 \fusion[producer|(]{}
 
@@ -972,7 +972,7 @@ fusion pipeline is to fuse producers into consumers.
 
 \fusion[producer|)]{}
 
-\subsection{Producer/Consumer Fusion}
+\subsection{Producer/Consumer fusion}
 \label{sec:producer_consumer_fusion}
 \fusion[consumer|(]{}
 
