--- a/sections/07-conclusion.tex
+++ b/sections/07-conclusion.tex
@@ -218,11 +218,11 @@ each element may spawn further parallel computations, with a flat data parallel
 execution model~\cite{Blelloch:1988iu}. Recent work has extended flattening to
 support richer data types and higher order functions~\cite{Jones:2008uu}.
 
-Extending the Accelerate language to support the expression nested parallelism,
-and implementing the vectorisation transformation to convert this nested
-parallelism into a flat data parallel program which can be executed on the
-compiler and runtime system presented in this thesis, is worthwhile future work.
-This would allow Accelerate to support programs that are very difficult to
+Extending the Accelerate language to support the expression of nested
+parallelism, and implementing the vectorisation transformation to convert this
+nested parallelism into a flat data parallel program which can be executed on
+the compiler and runtime system presented in this thesis, is worthwhile future
+work. This would allow Accelerate to support programs that are very difficult to
 parallelise in a flat data parallel setting, such as the Barnes-Hut algorithm
 for $N$-body simulation~\cite{Barnes:1986}.
 
