today's date on the cover

--- a/title.tex
+++ b/title.tex
@@ -45,7 +45,7 @@
 \noindent\hspace*{\centeroffset}\makebox[0pt][l]{
 \begin{minipage}{\textwidth}
     \centering
-    \ifoptionfinal{\phantom{\today}}{DRAFT: \today}
+    \ifoptionfinal{\today}{DRAFT: \today}
 \end{minipage}}
 
 \vspace{6ex}
