sign the declaration page

--- a/sections/ii-declaration.tex
+++ b/sections/ii-declaration.tex
@@ -43,9 +43,14 @@ intellectual content of this thesis is the product of my own work, except to the
 extent that assistance from others in the project's design and conception or in
 style, presentation and linguistic expression is acknowledged.
 
-\vspace{1in}
+\vspace{5mm}
+
 \noindent\makebox[0pt][l]{\begin{minipage}{\textwidth}
     \centering
+    \begin{tabular}[b]{cc}
+        \includegraphics{images/signature} &
+        \today \hspace{8mm}
+    \end{tabular} \\
     \hfill{} \textsc{trevor lee mcdonell} \hfill{} \textsc{date} \hfill{}
 \end{minipage}}
 
