--- a/thesis.tex
+++ b/thesis.tex
@@ -20,6 +20,7 @@
 
 \frontmatter
 \include{title}
+\include{sections/i-submission}
 \include{sections/ii-declaration}
 
 % Contents pages (only in book mode)
