intro: include Simon Marlow's book in the "impact" section

--- a/sections/01-introduction.tex
+++ b/sections/01-introduction.tex
@@ -117,6 +117,10 @@ Because of the work undertaken in this thesis, we have seen Accelerate gain
 traction within academia and industry, including:
 
 \begin{itemize}
+    \item Simon Marlow has recently published a book on \emph{Parallel and
+        Concurrent Programming in Haskell}~\cite{Marlow:2013wn}, which includes
+        a chapter on GPU programming using Accelerate.
+
     \item Peter Braam of Parallel Scientific is building a high level DSL in
         Haskell based on Accelerate, for image reconstruction computations for
         the Square Kilometer Array, the largest radio telescope in the world.
