basics: expressing -> executing

--- a/sections/02-basics.tex
+++ b/sections/02-basics.tex
@@ -95,7 +95,7 @@ illustrated in Figure~\ref{fig:cpu_gpu_block_diagram}.
     \label{fig:cpu_gpu_block_diagram}
 \end{figure}
 
-More specifically, the GPU\gpu{} is especially well suited to expressing
+More specifically, the GPU\gpu{} is especially well suited to executing
 problems that can be expressed as data parallel computations, where the same
 program is executed by many processors on many different data elements in
 parallel (\S\ref{sec:data_parallelism}). Because the same program is executed by
