basics: typo in equation

--- a/sections/02-basics.tex
+++ b/sections/02-basics.tex
@@ -260,7 +260,7 @@ Section~\ref{sec:array_fusion}.
 % \marginnote{tk: for non power-of-2 n, add upper/lower bounds symbols}
 If each thread combines two elements at a time, then a vector of length $N$ will
 be reduced in $\mathcal{O}\left( \log N \right)$ parallel steps. Each step $S$
-does $\sfrac{N}{S^2}$ independent operations, so the \emph{step
+does $\sfrac{N}{2^S}$ independent operations, so the \emph{step
 complexity}\index{complexity!step} of the algorithm is:
 \[
 \mathcal{O}\left( \log N \right)
