basics: ref TR "Parallel Scan for Stream Architectures"

--- a/sections/02-basics.tex
+++ b/sections/02-basics.tex
@@ -359,7 +359,7 @@ They also form the basis for efficiently mapping nested data-parallel languages
 such as NESL~\cite{Blelloch:1995ut,Blelloch:1996jx} on to flat data-parallel
 machines. Because of their fundamental importance to many algorithms,
 implementing efficient scan operations in CUDA\cuda{} has received much
-attention~\cite{Sengupta:2007tc,Sengupta:2008ut,Dotsenko:2008fo,Harris:2012fy}.
+attention~\cite{Sengupta:2007tc,Sengupta:2008ut,Dotsenko:2008fo,Merrill:2009un,Harris:2012fy}.
 
 \begin{figure}
     \begin{center}
