--- a/thesis.bib
+++ b/thesis.bib
@@ -2079,7 +2079,7 @@ month = dec
 }
 
 @article{Merrill:2011bz,
-author = {Merrill, Duane and Grimshaw, Andrew},
+author = {Merrill, Duane G and Grimshaw, Andrew S},
 title = {{High Performance and Scalable Radix Sorting}},
 journal = {Parallel Processing Letters},
 year = {2011},
@@ -2848,6 +2848,14 @@ year = {2012},
 organization = {Department of Computing, Imperial College London}
 }
 
+@article{Gibbons:2013tx,
+author = {Gibbons, Jeremy},
+title = {{Functional Programming for Domain-Specific Languages}},
+journal = {Central European Functional Programming-Summer School on Domain-Specific Languages},
+year = {2013},
+month = jul
+}
+
 @inproceedings{Bond:2010bd,
 author = {Bond, Barry and Hammil, Kerry and Litchev, Lubomir and Singh, Satnam},
 title = {{FPGA Circuit Synthesis of Accelerator Data-Parallel Programs}},
@@ -2857,6 +2865,14 @@ pages = {167--170},
 month = may
 }
 
+@inproceedings{Merrill:2010gc,
+author = {Merrill, Duane G and Grimshaw, Andrew S},
+title = {{Revisiting sorting for GPGPU stream architectures}},
+booktitle = {PACT '10: The 19th international conference on Parallel Architectures and Compilation Techniques},
+year = {2010},
+pages = {545--546}
+}
+
 @inproceedings{LinXu:2008ig,
 author = {Lin Xu and Wan, Justin W L},
 title = {{Real-time intensity-based rigid 2D-3D medical image registration using RapidMind Multicore Development Platform}},
@@ -2864,6 +2880,15 @@ booktitle = {EMBS '08: The 30th Annual International Conference of the IEEE Engi
 year = {2008},
 pages = {5382--5385},
 month = aug
+}
+
+@techreport{Merrill:2009un,
+author = {Merrill, Duane G and Grimshaw, Andrew S},
+title = {{Parallel Scan for Stream Architectures}},
+institution = {Department of Computer Science, University of Virginia},
+year = {2009},
+number = {CS2009-14},
+month = dec
 }
 
 @book{McCool:2004un,
@@ -2973,7 +2998,7 @@ pages = {353--364}
 }
 
 @inproceedings{Merrill:2012dl,
-author = {Merrill, Duane and Garland, Michael and Grimshaw, Andrew and Merrill, Duane and Garland, Michael and Grimshaw, Andrew},
+author = {Merrill, Duane G and Garland, Michael and Grimshaw, Andrew S and Merrill, Duane G and Garland, Michael and Grimshaw, Andrew S},
 title = {{Scalable GPU graph traversal}},
 booktitle = {PPoPP '12: The 17th ACM Symposium on Principles and Practice of Parallel Programming},
 year = {2012},
