--- a/thesis.bib
+++ b/thesis.bib
@@ -1341,7 +1341,7 @@ pages = {1--31}
 @phdthesis{Keller:1999vy,
 author = {Keller, Gabriele},
 title = {{Transformation-based Implementation of Nested Data Parallelism for Distributed Memory Machines}},
-school = {Technische Universit\"at Berlin, Fachbereich Informatik},
+school = {Technische Universit{\"a}t Berlin, Fachbereich Informatik},
 year = {1999}
 }
 
@@ -2889,6 +2889,15 @@ institution = {Department of Computer Science, University of Virginia},
 year = {2009},
 number = {CS2009-14},
 month = dec
+}
+
+@techreport{Levin:1994uu,
+author = {Levin, Gary Marc and Nyland, Lars},
+title = {{An Introduction to Proteus}},
+institution = {Clarkson University and University of North Carolina},
+year = {1994},
+number = {TR95-025},
+month = aug
 }
 
 @book{McCool:2004un,
