--- a/sections/02-basics.tex
+++ b/sections/02-basics.tex
@@ -782,7 +782,7 @@ is left for significant future work to add support for the expression of nested
 parallelism.
 
 
-\subsubsection{Segmented Reduction}
+\subsubsection{Segmented reduction}
 
 Segmented reduction is a primitive operations in Accelerate. Is is conceptually
 similar to the multidimensional reduction, except that the length of each
